salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/Omnishift_Marketing_Send__c.object-meta.xml
<CustomObject>
    <label>Omnishift Marketing Send</label>
    <pluralLabel>Omnishift Marketing Sends</pluralLabel>
    <nameField><label>Send Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>The marketing calendar, as it exists in Account Engagement. The agent reads it so an advisor is never sent at someone the same week marketing is.</description>
</CustomObject>