salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Text</type>
    <length>120</length>
    <description>The list or segment the send goes to, in the marketer words.</description>
</CustomField>