salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
</CustomField>