salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/fields/Omnishift_Lead__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Omnishift_Marketing_Sends</relationshipName>
    <relationshipLabel>Omnishift Marketing Sends</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>