salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/fields/Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_For__c</fullName>
    <label>Scheduled For</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>