salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Marketing_Send__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Text</type>
    <length>60</length>
</CustomField>